# Mechanical-arm-force-control-learning

./: README.md
Admittance_Control/: CMakeLists.txt
Cartesian_Space_Force_Controller/config/: controller_config.yaml  kukaiiwa_config.yaml  qpWeights_config.yaml
Cartesian_Space_Force_Controller/include/: comman.hpp  mPinocchioIK.hpp  worldInit_C.hpp  worldInit_Q.hpp
Cartesian_Space_Force_Controller/src/: Cartesian_Space_Force_Controller.cpp  comman.cpp
force_controller/: CMakeLists.txt
my_controller/: my_controller
my_controller/include/: mPinocchioIK.hpp
my_controller/src/: mycontroller.cpp
try/: CMakeLists.txt
try/include/: feedforward_controller.hpp
try/src/: feedforward_controller.cpp  main.cpp
try_supervisor/: CMakeLists.txt
try_supervisor/src/: my_controller.cpp
urdf/ur5/ur_description/urdf/: ur5.urdf
